// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders and matches with snapshot 1`] = `
<DocumentFragment>
  <div
    class="SearchBox "
  >
    <form
      class="SearchForm"
    >
      <div
        class="SearchInputContainer"
      >
        <input
          placeholder="Book search"
          value=""
        />
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-magnifying-glass SubmitButton-inside"
          data-icon="magnifying-glass"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
            fill="currentColor"
          />
        </svg>
      </div>
      <button
        class="ToggleButton-large"
        data-testid="filter-toggle"
        title="Toggle Advanced Search"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-filter "
          data-icon="filter"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.9 54.9C10.5 40.9 24.5 32 40 32H472c15.5 0 29.5 8.9 36.1 22.9s4.6 30.5-5.2 42.5L320 320.9V448c0 12.1-6.8 23.2-17.7 28.6s-23.8 4.3-33.5-3l-64-48c-8.1-6-12.8-15.5-12.8-25.6V320.9L9 97.3C-.7 85.4-2.8 68.8 3.9 54.9z"
            fill="currentColor"
          />
        </svg>
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`it renders and matches with snapshot 2`] = `
<DocumentFragment>
  <div
    class="SearchBox AdvancedSearch"
  >
    <form
      class="SearchForm"
    >
      <div
        class="SearchInputContainer"
      >
        <input
          placeholder="Book search"
          value=""
        />
      </div>
      <input
        placeholder="Book title"
        value=""
      />
      <input
        placeholder="Book author"
        value=""
      />
      <input
        placeholder="Book publisher"
        value=""
      />
      <input
        placeholder="Book subject"
        value=""
      />
      <button
        class="ToggleButton"
        title="Toggle Advanced Search"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-filter "
          data-icon="filter"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.9 54.9C10.5 40.9 24.5 32 40 32H472c15.5 0 29.5 8.9 36.1 22.9s4.6 30.5-5.2 42.5L320 320.9V448c0 12.1-6.8 23.2-17.7 28.6s-23.8 4.3-33.5-3l-64-48c-8.1-6-12.8-15.5-12.8-25.6V320.9L9 97.3C-.7 85.4-2.8 68.8 3.9 54.9z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        class="SubmitButton"
        data-testid="submit"
        title="Submit Search"
        type="submit"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-magnifying-glass "
          data-icon="magnifying-glass"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
            fill="currentColor"
          />
        </svg>
      </button>
    </form>
  </div>
</DocumentFragment>
`;
